load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    embedsrcs = ["tooManyRetestsComment.gomd"],
    importpath = "kubevirt.io/project-infra/external-plugins/referee/server",
    visibility = ["//visibility:public"],
    deps = [
        "//external-plugins/referee/ghgraphql:go_default_library",
        "//external-plugins/referee/metrics:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github:go_default_library",
        "//vendor/k8s.io/test-infra/prow/pjutil:go_default_library",
        "//vendor/k8s.io/test-infra/prow/pluginhelp:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "server_suite_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//external-plugins/referee/ghgraphql:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/stretchr/testify/mock:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github:go_default_library",
    ],
)
