load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/external-plugins/rehearse/plugin",
    visibility = ["//visibility:private"],
    deps = [
        "//external-plugins/rehearse/plugin/handler:go_default_library",
        "//external-plugins/rehearse/plugin/server:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/test-infra/pkg/flagutil:go_default_library",
        "//vendor/k8s.io/test-infra/prow/client/clientset/versioned/typed/prowjobs/v1:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config/secret:go_default_library",
        "//vendor/k8s.io/test-infra/prow/flagutil:go_default_library",
        "//vendor/k8s.io/test-infra/prow/git/v2:go_default_library",
        "//vendor/k8s.io/test-infra/prow/interrupts:go_default_library",
        "//vendor/k8s.io/test-infra/prow/pluginhelp:go_default_library",
        "//vendor/k8s.io/test-infra/prow/pluginhelp/externalplugins:go_default_library",
    ],
)

go_binary(
    name = "plugin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "rehearse_suite_test.go",
        "rehearse_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//external-plugins/rehearse/plugin/handler:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/testing:go_default_library",
        "//vendor/k8s.io/test-infra/prow/apis/prowjobs/v1:go_default_library",
        "//vendor/k8s.io/test-infra/prow/client/clientset/versioned/typed/prowjobs/v1/fake:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config:go_default_library",
        "//vendor/k8s.io/test-infra/prow/git/localgit:go_default_library",
        "//vendor/k8s.io/test-infra/prow/git/v2:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github/fakegithub:go_default_library",
    ],
)
