load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["uploader.go"],
    importpath = "kubevirt.io/project-infra/plugins/cmd/uploader",
    visibility = ["//visibility:private"],
    deps = [
        "//plugins/mirror:go_default_library",
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/github.com/bazelbuild/buildtools/build:go_default_library",
        "//vendor/google.golang.org/api/option:go_default_library",
    ],
)

go_binary(
    name = "uploader",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
