load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/robots/cmd/botreview",
    visibility = ["//visibility:private"],
    deps = [
        "//external-plugins/botreview/review:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//pkg/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/config/secret:go_default_library",
        "@io_k8s_test_infra//prow/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/git/v2:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
    ],
)

go_binary(
    name = "botreview",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
