load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/robots/cmd/botreview",
    visibility = ["//visibility:private"],
    deps = [
        "//external-plugins/botreview/review:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/k8s.io/test-infra/pkg/flagutil:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config/secret:go_default_library",
        "//vendor/k8s.io/test-infra/prow/flagutil:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github:go_default_library",
    ],
)

go_binary(
    name = "botreview",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
