load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/robots/cmd/dependabot",
    visibility = ["//visibility:private"],
    deps = [
        "//robots/pkg/dependabot:go_default_library",
        "//robots/pkg/dependabot/api:go_default_library",
        "@com_github_google_go_github_v32//github:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_mod//modfile:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_binary(
    name = "dependabot",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
