load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/robots/cmd/flake-report-creator",
    visibility = ["//visibility:private"],
    deps = [
        "//robots/pkg/flakefinder:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
    ],
)

go_binary(
    name = "flake-report-creator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
