load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/robots/cmd/flake-report-creator",
    visibility = ["//visibility:private"],
    deps = [
        "//robots/cmd/flake-report-creator/cmd:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "app",
    embed = [":go_default_library"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "Docker",
    image = ":app",
    registry = "quay.io",
    repository = "kubevirtci/flake-report-creator",
    tag = "{DOCKER_TAG}",
)

go_binary(
    name = "flake-report-creator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
