load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/robots/cmd/flake-stats-index-page",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/google.golang.org/api/iterator:go_default_library",
    ],
)

go_binary(
    name = "flake-stats-index-page",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
