load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    embedsrcs = ["flake-stats.gohtml"],
    importpath = "kubevirt.io/project-infra/robots/cmd/flake-stats",
    visibility = ["//visibility:private"],
    deps = ["//robots/pkg/flakefinder:go_default_library"],
)

go_binary(
    name = "flake-stats",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
