load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    embedsrcs = ["flake-stats.gohtml"],
    importpath = "kubevirt.io/project-infra/robots/cmd/flake-stats",
    visibility = ["//visibility:private"],
    deps = ["//robots/pkg/flakefinder:go_default_library"],
)

go_binary(
    name = "flake-stats",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "main_suite_test.go",
        "main_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
