load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/robots/cmd/indexpagecreator",
    visibility = ["//visibility:public"],
    deps = [
        "//robots/pkg/flakefinder:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "app",
    embed = [":go_default_library"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "Docker",
    image = ":app",
    registry = "index.docker.io",
    repository = "kubevirtci/indexpagecreator",
)

go_binary(
    name = "indexpagecreator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
